--- a/app/views/store/index.html.haml
+++ b/app/views/store/index.html.haml
@@ -2,11 +2,14 @@
 	%p{id: "notice"}
 		= notice
 %h1 Your Pragmatic Catalog
-- @products.each do |product|
-	%div{class: "entry"}
-		= image_tag(product.image_url)
-		%h3= product.title
-		= sanitize(product.description)
-		%div{class: "price_line"}
-			%span{class: "price"}
-				= product.price
+- cache ['store', Product.latest] do
+	test
+	- @products.each do |product|
+		- cache ['entry', product] do
+			%div{class: "entry"}
+				= image_tag(product.image_url)
+				%h3= product.title
+				= sanitize(product.description)
+				%div{class: "price_line"}
+					%span{class: "price"}
+						= number_to_currency(product.price)
